# resource-monitor

./: README.md
Backend/: CMakeLists.txt  main.cpp
Backend/Components/: CPUComponent.cpp  CPUComponent.hpp  Component.hpp  DiskComponent.cpp  DiskComponent.hpp  ProcessComponent.cpp  ProcessComponent.hpp  RAMComponent.cpp  RAMComponent.hpp
Backend/Core/: JSONManager.cpp  JSONManager.hpp  ResourceMonitor.cpp  ResourceMonitor.hpp
Frontend/: index.html  package-lock.json  package.json  tsconfig.electron.json
Frontend/dist-electron/: main.js
Frontend/electron/: main.ts
Frontend/src/: charts.ts  main.ts  style.css  types.ts  ws.ts
